# ngfw_simulator

./: .$threat_intelligence_diagrams.drawio.bkp  CMakeLists.txt  Makefile  README.md  The_general_system_of_building_the_project.odt  module_scripts.bash  threat_intelligence_diagrams.drawio
core/databases/: README.md
core/heart/: README.md
core/heart/The_Controller/: .$ControllerHeadBodyDesign.drawio.bkp  ControllerHeadBodyDesign.drawio  a.out  body.cpp  database_of_commands.txt  database_of_modules.txt  firewall  head.cpp  login.txt  manager_database.json  modulehead.cpp  notes.txt  passwords.txt  start_stateful_inspection.json  test.cpp
core/heart/controller/: controller.cpp
core/heart/policy-engine/: decision.h
core/information/encryption/: README.md
core/modules/: README.md
core/modules/module1/sos/: README.txt
core/packet/: capture.cpp  utils.cpp
core/shared-headers/: module-api.h  packet.h
modules/: README.md
